--- a/doctor_who.html
+++ b/doctor_who.html
@@ -5,67 +5,90 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 		<meta name="description" content="" />
 		<meta name="author" content="" />
-		<title>Doctor Who</title>
+		<title>Doctor Who - Doctor Who</title>
 		<link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
 		<link href="style.css" rel="stylesheet" />
 	</head>
 
 	<body>
+		<!--Navbar-->
 		<nav>
 			<input type="checkbox" id="menu">
 			<label for="menu">←</label>
 			<a href="index.html">Doctor Who</a>
 			<ul>
-				<li><a href="#">STORIES</a></li>
-				<li><a href="#">MISSING</a></li>
-				<li><a href="#">1</a></li>
-				<li><a href="#">2</a></li>
+				<li><a href="stories.html">STORIES</a></li>
+				<li><a href="">MISSING</a></li>
+				<li><a href="">1</a></li>
+				<li><a href="">2</a></li>
 			</ul>
 		</nav>
 
-		<!-- Header-->
+		<!--Header-->
 		<header>
 			<h1>Doctor Who</h1>
-			<p>The main show</p>
+			<p>All of time and space</p>
 		</header>
 
 
 		<div class="cards">
+			<p>Season 1</p>
 			<ul>
-				<li class="card" id="main">
-					<img src="" alt="Doctor Who">
+				<li class="card">
+					<img src="" alt="An Unearthly Child">
 					<h2>
-						<a href="asdasd">Doctor Who</a>
+						<a href="">An Unearthly Child</a>
 					</h2>
-					<p>The main show</p>
+					<p>Story 001</p>
 				</li>
 				<li class="card">
-					<img src="" alt="Doctor Who">
+					<img src="" alt="The Daleks">
 					<h2>
-						<a href="asdasd">Doctor Who</a>
+						<a href="">The Daleks</a>
 					</h2>
-					<p>The main show</p>
+					<p>Story 002</p>
 				</li>
 				<li class="card">
-					<img src="" alt="Doctor Who">
+					<img src="" alt="The Edge of Destruction">
 					<h2>
-						<a href="asdasd">Doctor Who</a>
+						<a href="">The Edge of Destruction</a>
 					</h2>
-					<p>The main show</p>
+					<p>Story 003</p>
 				</li>
 				<li class="card">
-					<img src="" alt="Doctor Who">
+					<img src="" alt="Marco Polo">
 					<h2>
-						<a href="asdasd">Doctor Who</a>
+						<a href="">Marco Polo</a>
 					</h2>
-					<p>The main show</p>
-				<li class="card">
-					<img src="" alt="Doctor Who">
-					<h2>
-						<a href="asdasd">Doctor Who</a>
-					</h2>
-					<p>The main show</p>
+					<p>Story 004</p>
 				</li>
+				<li class="card">
+					<img src="" alt="The Keys of Marinus">
+					<h2>
+						<a href="">The Keys of Marinus</a>
+					</h2>
+					<p>Story 005</p>
+				</li>
+				<li class="card">
+					<img src="" alt="The Aztecs">
+					<h2>
+						<a href="">The Aztecs</a>
+					</h2>
+					<p>Story 006</p>
+				</li>
+				<li class="card">
+					<img src="" alt="The Sensorites">
+					<h2>
+						<a href="">The Sensorites</a>
+					</h2>
+					<p>Story 007</p>
+				</li>
+				<li class="card">
+					<img src="" alt="The Reign of Terror">
+					<h2>
+						<a href="">The Reign of Terror</a>
+					</h2>
+					<p>Story 008</p>
 				</li>
 			</ul>
     	</div>
