--- a/index.html
+++ b/index.html
@@ -11,19 +11,20 @@
 	</head>
 
 	<body>
+		<!--Navbar-->
 		<nav>
 			<input type="checkbox" id="menu">
 			<label for="menu">←</label>
 			<a href="#">Doctor Who</a>
 			<ul>
 				<li><a href="stories.html">STORIES</a></li>
-				<li><a href="#">MISSING</a></li>
-				<li><a href="#">1</a></li>
-				<li><a href="#">2</a></li>
+				<li><a href="">MISSING</a></li>
+				<li><a href="">1</a></li>
+				<li><a href="">2</a></li>
 			</ul>
 		</nav>
 
-		<!-- Header-->
+		<!--Header-->
 		<header>
 			<h1>Menu</h1>
 			<p>Menu</p>
