--- a/stories.html
+++ b/stories.html
@@ -5,69 +5,78 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 		<meta name="description" content="" />
 		<meta name="author" content="" />
-		<title>Doctor Who</title>
+		<title>Doctor Who - Stories</title>
 		<link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
 		<link href="style.css" rel="stylesheet" />
 	</head>
 
 	<body>
+		<!--Navbar--!>
 		<nav>
 			<input type="checkbox" id="menu">
 			<label for="menu">←</label>
 			<a href="index.html">Doctor Who</a>
 			<ul>
 				<li><a href="#">STORIES</a></li>
-				<li><a href="#">MISSING</a></li>
-				<li><a href="#">1</a></li>
-				<li><a href="#">2</a></li>
+				<li><a href="">MISSING</a></li>
+				<li><a href="">1</a></li>
+				<li><a href="">2</a></li>
 			</ul>
 		</nav>
 
-		<!-- Header-->
+		<!--Header-->
 		<header>
 			<h1>Stories</h1>
 			<p>List of all stories in the Whoniverse</p>
 		</header>
 
 
-		<div class="s">
 		<ul>
 			<li class="card">
-				<img src="" alt="Doctor Who">
+				<img src="assets/doctor_who.jpg" alt="Doctor Who">
 				<h2>
 					<a href="doctor_who.html">Doctor Who</a>
 				</h2>
-				<p>The main show</p>
-			</li>
-			<li class="card">
-				<img src="" alt="K-9 and Company">
-				<h2>
-					<a href="">K-9 and Company</a>
-				</h2>
-				<p>K-9!</p>
-			</li>
-			<li class="card">
-				<img src="" alt="Doctor Who">
-				<h2>
-					<a href="">Torchwood</a>
-				</h2>
-				<p>The main show</p>
-			</li>
-			<li class="card">
-				<img src="" alt="Doctor Who">
-				<h2>
-					<a href="">The Sarah Jane Adventures</a>
-				</h2>
-				<p>The main show</p>
-			<li class="card">
-				<img src="" alt="Doctor Who">
-				<h2>
-					<a href="">Class</a>
-				</h2>
-				<p>The main show</p>
-			</li>
+				<p>All of time and space</p>
 			</li>
 		</ul>
+		<div class="cards">
+			<ul>
+				<li class="card">
+					<img src="assets/k-9_and_company.jpg" alt="K-9 and Company">
+					<h2>
+						<a href="">K-9 and Company</a>
+					</h2>
+					<p>K-9!</p>
+				</li>
+				<li class="card">
+					<img src="assets/torchwood.jpg" alt="Torchwood">
+					<h2>
+						<a href="">Torchwood</a>
+					</h2>
+					<p>Outside the government, beyond the police</p>
+				</li>
+				<li class="card">
+					<img src="assets/the_sarah_jane_adventures.jpg" alt="The Sarah Jane Adventures">
+					<h2>
+						<a href="">The Sarah Jane Adventures</a>
+					</h2>
+					<p>13 Bannermen Road</p>
+				<li class="card">
+					<img src="assets/class.jpg" alt="Class">
+					<h2>
+						<a href="">Class</a>
+					</h2>
+					<p>Time never forgets</p>
+				</li>
+				<li class="card">
+					<img src="assets/the_war_between.jpg" alt="The War Between the Land and the Sea">
+					<h2>
+						<a href="">The War Between the Land and the Sea</a>
+					</h2>
+					<p>Coming Soon!</p>
+				</li>
+			</ul>
 		</div>
 	</body>
 </html>
