--- a/missing.html
+++ b/missing.html
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 		<meta name="description" content="" />
 		<meta name="author" content="" />
-		<title>Doctor Who</title>
+		<title>Doctor Who - Missing</title>
 		<link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
 		<link href="style.css" rel="stylesheet" />
 	</head>
@@ -15,18 +15,18 @@
 		<nav>
 			<input type="checkbox" id="menu">
 			<label for="menu">↓</label>
-			<a href="#">Doctor Who</a>
+			<a href="index.html">Doctor Who</a>
 			<ul>
 				<li><a href="stories.html">STORIES</a></li>
-				<li><a href="missing.html">MISSING</a></li>
+				<li><a href="#">MISSING</a></li>
 				<li><a href="about.html">ABOUT</a></li>
 			</ul>
 		</nav>
 
 		<!--Header-->
 		<header>
-			<h1>Menu</h1>
-			<p>Menu</p>
+			<h1>Missing</h1>
+			<p>Missing Episodes</p>
 		</header>
 
 
