--- a/stories.html
+++ b/stories.html
@@ -14,13 +14,12 @@
 		<!--Navbar--!>
 		<nav>
 			<input type="checkbox" id="menu">
-			<label for="menu">←</label>
+			<label for="menu">↓</label>
 			<a href="index.html">Doctor Who</a>
 			<ul>
 				<li><a href="#">STORIES</a></li>
-				<li><a href="">MISSING</a></li>
-				<li><a href="">1</a></li>
-				<li><a href="">2</a></li>
+				<li><a href="missing.html">MISSING</a></li>
+				<li><a href="about.html">ABOUT</a></li>
 			</ul>
 		</nav>
 
@@ -31,49 +30,37 @@
 		</header>
 
 
-		<ul>
-			<li class="card">
-				<img src="assets/doctor_who.jpg" alt="Doctor Who">
-				<h2>
-					<a href="doctor_who.html">Doctor Who</a>
-				</h2>
-				<p>All of time and space</p>
-			</li>
-		</ul>
 		<div class="cards">
 			<ul>
 				<li class="card">
+					<img src="assets/doctor_who.jpg" alt="Doctor Who">
+					<h2><a href="stories/doctor_who.html">Doctor Who</a></h2>
+					<p>All of time and space</p>
+				</li>
+			</ul>
+			<ul>
+				<li class="card">
 					<img src="assets/k-9_and_company.jpg" alt="K-9 and Company">
-					<h2>
-						<a href="">K-9 and Company</a>
-					</h2>
+					<h2><a href="">K-9 and Company</a></h2>
 					<p>K-9!</p>
 				</li>
 				<li class="card">
 					<img src="assets/torchwood.jpg" alt="Torchwood">
-					<h2>
-						<a href="">Torchwood</a>
-					</h2>
+					<h2><a href="">Torchwood</a></h2>
 					<p>Outside the government, beyond the police</p>
 				</li>
 				<li class="card">
 					<img src="assets/the_sarah_jane_adventures.jpg" alt="The Sarah Jane Adventures">
-					<h2>
-						<a href="">The Sarah Jane Adventures</a>
-					</h2>
+					<h2><a href="">The Sarah Jane Adventures</a></h2>
 					<p>13 Bannermen Road</p>
 				<li class="card">
 					<img src="assets/class.jpg" alt="Class">
-					<h2>
-						<a href="">Class</a>
-					</h2>
+					<h2><a href="">Class</a></h2>
 					<p>Time never forgets</p>
 				</li>
 				<li class="card">
 					<img src="assets/the_war_between.jpg" alt="The War Between the Land and the Sea">
-					<h2>
-						<a href="">The War Between the Land and the Sea</a>
-					</h2>
+					<h2><a href="">The War Between the Land and the Sea</a></h2>
 					<p>Coming Soon!</p>
 				</li>
 			</ul>
