--- a/stories/doctor_who/an_unearthly_child.html
+++ b/stories/doctor_who/an_unearthly_child.html
@@ -5,9 +5,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 		<meta name="description" content="" />
 		<meta name="author" content="" />
-		<title>Doctor Who</title>
+		<title>Doctor Who - An Unearthly Child</title>
 		<link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-		<link href="style.css" rel="stylesheet" />
+		<link href="../../style.css" rel="stylesheet" />
 	</head>
 
 	<body>
@@ -15,18 +15,18 @@
 		<nav>
 			<input type="checkbox" id="menu">
 			<label for="menu">↓</label>
-			<a href="#">Doctor Who</a>
+			<a href="../../index.html">Doctor Who</a>
 			<ul>
-				<li><a href="stories.html">STORIES</a></li>
-				<li><a href="missing.html">MISSING</a></li>
-				<li><a href="about.html">ABOUT</a></li>
+				<li><a href="../../stories.html">STORIES</a></li>
+				<li><a href="../../missing.html">MISSING</a></li>
+				<li><a href="../../about.html">ABOUT</a></li>
 			</ul>
 		</nav>
 
 		<!--Header-->
 		<header>
-			<h1>Menu</h1>
-			<p>Menu</p>
+			<h1>An Unearthly Child</h1>
+			<p>STORY 001</p>
 		</header>
 
 
